Replace John Doe placeholder with Emmanuel Oduro Bempong

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Mechanical engineer portfolio showcasing professional experience, skills, and projects.">
-    <title>John Doe - Mechanical Engineer | Seeking Opportunities</title>
+    <title>Emmanuel Oduro Bempong - Mechanical Engineer | Seeking Opportunities</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Poppins (for headings) and Inter (for body) -->
@@ -222,7 +222,7 @@
     <!-- Navigation Bar -->
     <nav id="navbar" class="bg-white/20 backdrop-blur-lg shadow-lg py-4 px-6 md:px-12 fixed w-full z-20 top-0 transition-all duration-300 ease-in-out">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold text-white hover:text-sky-300 transition duration-300">John Doe</a>
+            <a href="#" class="text-2xl font-bold text-white hover:text-sky-300 transition duration-300">Emmanuel Oduro Bempong</a>
             <div class="hidden md:flex space-x-8">
                 <a href="#home" class="nav-link text-gray-200 hover:text-sky-300 transition duration-300 font-medium">Home</a>
                 <a href="#about" class="nav-link text-gray-200 hover:text-sky-300 transition duration-300 font-medium">About</a>
@@ -275,11 +275,11 @@
             <h2 class="section-title text-center mx-auto mb-12">About Me</h2>
             <div class="glass-card p-8 md:p-12 flex flex-col md:flex-row items-center md:space-x-12">
                 <div class="md:w-1/3 mb-8 md:mb-0">
-                    <img src="https://placehold.co/400x400/334155/e2e8f0?text=Professional+Photo" alt="John Doe Professional Photo" class="rounded-full shadow-2xl ring-4 ring-sky-500 w-64 h-64 md:w-full md:h-auto object-cover mx-auto transform hover:scale-105 transition-transform duration-300">
+                    <img src="https://placehold.co/400x400/334155/e2e8f0?text=Professional+Photo" alt="Emmanuel Oduro Bempong Professional Photo" class="rounded-full shadow-2xl ring-4 ring-sky-500 w-64 h-64 md:w-full md:h-auto object-cover mx-auto transform hover:scale-105 transition-transform duration-300">
                 </div>
                 <div class="md:w-2/3 text-lg leading-relaxed">
                     <p class="mb-4">
-                        Hello! I'm John Doe, a results-driven Mechanical Engineer with over 10 years of experience in designing, analyzing, and optimizing mechanical systems across diverse sectors like automotive, aerospace, and renewable energy. I am currently seeking challenging roles where I can apply my skills to drive innovation and efficiency.
+                        Hello! I'm Emmanuel Oduro Bempong, a results-driven Mechanical Engineer with over 10 years of experience in designing, analyzing, and optimizing mechanical systems across diverse sectors like automotive, aerospace, and renewable energy. I am currently seeking challenging roles where I can apply my skills to drive innovation and efficiency.
                     </p>
                     <p class="mb-4">
                         I hold a Master's degree in Mechanical Engineering from a top-tier university and possess a strong foundation in CAD/CAM, FEA, thermodynamics, fluid dynamics, and materials science. My career is marked by successful project deliveries and a proven ability to tackle complex engineering problems with creative and effective solutions.
@@ -523,7 +523,7 @@
     <!-- Footer -->
     <footer class="bg-gray-900 text-gray-400 py-8 px-6 md:px-12 text-center border-t border-gray-700">
         <div class="container mx-auto">
-            <p>&copy; 2025 John Doe. All rights reserved.</p>
+            <p>&copy; 2025 Emmanuel Oduro Bempong. All rights reserved.</p>
             <div class="flex justify-center space-x-4 mt-4">
                 <a href="https://www.linkedin.com/in/johndoeengineer" target="_blank" class="text-gray-400 hover:text-white transition duration-300">LinkedIn</a>
                 <a href="#" class="text-gray-400 hover:text-white transition duration-300">GitHub (if applicable)</a>
