Fix typewriter effect animation and responsive design
- Shortened hero title text for better typewriter timing
- Improved animation duration and steps for smoother effect
- Added mobile-responsive fallback with fade-in animation
- Enhanced animation sequence with proper delays
- Fixed text container sizing for proper animation display

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
     <section id="home" class="relative text-white py-32 md:py-48 flex items-center justify-center min-h-screen-minus-nav overflow-hidden">
         <div class="container mx-auto text-center px-6 z-10">
             <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-6 animate-typing mx-auto max-w-4xl">
-                Experienced Mechanical Engineer Seeking New Opportunities
+                Mechanical Engineer Seeking New Opportunities
             </h1>
-            <p class="text-lg md:text-xl mb-10 max-w-3xl mx-auto opacity-90 fade-in-section">
+            <p class="text-lg md:text-xl mb-10 max-w-3xl mx-auto opacity-90 fade-in-section animation-delay-1000">
                 Leveraging expertise in design, analysis, and optimization to contribute to innovative engineering teams.
             </p>
-            <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-4 fade-in-section animation-delay-500">
+            <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-4 fade-in-section animation-delay-2000">
                 <a href="#resume" class="btn-primary">Download Resume</a>
                 <a href="#contact" class="btn-secondary">Connect with Me</a>
             </div>
