Redesign typewriter effect with improved implementation
- Simplified typewriter text to "Mechanical Engineer" for better animation
- Created proper typewriter animation using width-based transitions
- Added subtitle "Seeking New Opportunities" with fade-in effect
- Improved animation timing with sequential element appearance
- Enhanced responsive design for better mobile experience
- Removed complex animation steps that were causing display issues

--- a/index.html
+++ b/index.html
@@ -86,10 +86,13 @@
     <main id="main-content">
     <section id="home" class="relative text-white py-32 md:py-48 flex items-center justify-center min-h-screen-minus-nav overflow-hidden">
         <div class="container mx-auto text-center px-6 z-10">
-            <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-6 animate-typing mx-auto max-w-4xl">
-                Mechanical Engineer Seeking New Opportunities
+            <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-2 mx-auto max-w-4xl">
+                <span class="typewriter-text">Mechanical Engineer</span>
             </h1>
-            <p class="text-lg md:text-xl mb-10 max-w-3xl mx-auto opacity-90 fade-in-section animation-delay-1000">
+            <h2 class="text-2xl md:text-3xl font-semibold mb-6 mx-auto max-w-4xl fade-in-section animation-delay-1000">
+                Seeking New Opportunities
+            </h2>
+            <p class="text-lg md:text-xl mb-10 max-w-3xl mx-auto opacity-90 fade-in-section animation-delay-1500">
                 Leveraging expertise in design, analysis, and optimization to contribute to innovative engineering teams.
             </p>
             <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-4 fade-in-section animation-delay-2000">
