--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <!-- Hero Section -->
     <main id="main-content">
-    <section id="home" class="relative text-white py-32 md:py-48 flex items-center justify-center min-h-screen-minus-nav overflow-hidden">
+    <section id="home" class="hero-section relative py-32 md:py-48 flex items-center justify-center min-h-screen-minus-nav overflow-hidden">
         <!-- Enhanced Particle System -->
         <div class="hero-particles">
             <div class="particle" style="left: 10%; width: 4px; height: 4px; animation-delay: 0s;"></div>
@@ -410,8 +410,8 @@
         <div class="container mx-auto">
             <p>&copy; 2025 Emmanuel Oduro Bempong. All rights reserved.</p>
             <div class="flex justify-center space-x-4 mt-4">
-                <a href="https://www.linkedin.com/in/johndoeengineer" target="_blank" class="text-gray-400 hover:text-white transition duration-300">LinkedIn</a>
-                <a href="#" class="text-gray-400 hover:text-white transition duration-300">GitHub (if applicable)</a>
+                <a href="https://www.linkedin.com/in/johndoeengineer" target="_blank" class="social-link transition duration-300">LinkedIn</a>
+                <a href="#" class="social-link transition duration-300">GitHub (if applicable)</a>
                 <!-- Add more social links as needed -->
             </div>
         </div>
